# dns-exfiltration-detection

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
Notebooks/: dns_exfiltration.ipynb  dns_exfiltration_analysis-framework.ipynb  dns_exfiltration_analysis.ipynb  dns_exfiltration_detection.ipynb  dns_exfiltration_github.ipynb  extract.ipynb
Scripts/: Untitled.ipynb  dns_utils.py  process_pcap.py
src/dns_exfil/: process_pcap.py
