[tool.poetry]
name = "dns-exfiltration-detection"
version = "0.1.0"
description = "DNS Exfiltration Detection and Analysis Tools"
authors = ["Herbert Maosa <hmaosa@irontrustconsulting.co.uk>"]
readme = "README.md"
packages = [{ include = "dns_exfil", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.0"
jupyterlab = "^4.4.3"
seaborn = "^0.13.2"
plotly = "^6.1.2"
tqdm = "^4.67.1"
dpkt = "^1.9.8"
scapy = "^2.6.1"
pyspark = "^4.0.0"
tldextract = "^5.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

